Fix the donate box wrapping and forcing the menus down (reported by pluknet and allanjude).
Fix the menu width and margin (reported by allanjude).

--- a/en_US.ISO8859-1/htdocs/layout/css/layout.css
+++ b/en_US.ISO8859-1/htdocs/layout/css/layout.css
@@ -51,7 +51,6 @@
   position: relative;
   border: 0px;
   padding-left: 0px;
-  margin-right: -4%;
   float: right;
 }
 
@@ -423,9 +422,9 @@
 }
 
 .frontdonateroundbox {
-  margin-top: 10px;
+  margin-top: 0.5em;
   padding: 0;
-  width: 180px;
+  width: 85%;
   background-color: white;
   border-radius: 10px;
 }
